tests/baselines/reference/parserParameterList15(strict=true).errors.txt
parserParameterList15.ts(1,10): error TS2394: This overload signature is not compatible with its implementation signature.
parserParameterList15.ts(1,10): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
parserParameterList15.ts(1,14): error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
parserParameterList15.ts(2,14): error TS7006: Parameter 'a' implicitly has an 'any' type.
parserParameterList15.ts(2,17): error TS7006: Parameter 'b' implicitly has an 'any' type.


==== parserParameterList15.ts (5 errors) ====
    function foo(a = 4);
             ~~~
!!! error TS2394: This overload signature is not compatible with its implementation signature.
!!! related TS2750 parserParameterList15.ts:2:10: The implementation signature is declared here.
             ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
                 ~~~~~
!!! error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
    function foo(a, b) {}
                 ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
                    ~
!!! error TS7006: Parameter 'b' implicitly has an 'any' type.